--- a/materi1.html
+++ b/materi1.html
@@ -62,7 +62,7 @@
                     <div class="swiper sliderFeaturedPosts">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url('./assets/img/portfolio/rumah-honai-1.jpg');">
+                                <a href="" class="img-bg d-flex align-items-end" style="background-image: url('./assets/img/portfolio/rumah-honai-1.jpg');">
                                     <div class="img-bg-inner">
                                         <h2>Modul Pembelajaran Etnomatematika Berbasis Website Untuk Meningkatkan Kemampuan Literasi Matematis</h2>
                                     </div>
@@ -70,7 +70,7 @@
                             </div>
 
                             <div class="swiper-slide">
-                                <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url('https://asset-a.grid.id/crop/0x0:0x0/x/photo/2022/08/13/6-budaya-indonesia-yang-terkenal-20220813022716.jpg');">
+                                <a href="" class="img-bg d-flex align-items-end" style="background-image: url('https://asset-a.grid.id/crop/0x0:0x0/x/photo/2022/08/13/6-budaya-indonesia-yang-terkenal-20220813022716.jpg');">
                                     <div class="img-bg-inner">
                                         <h2>Indonesia memiliki keanekaragaman budaya yang merupakan sebuah keindahan.</h2>
                                     </div>
@@ -78,14 +78,14 @@
                             </div>
 
                             <div class="swiper-slide">
-                                <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url('https://ik.imagekit.io/tvlk/blog/2021/01/Tari-Saman-shutterstock_513759277-1024x680.jpeg?tr=dpr-2,w-675');">
+                                <a href="" class="img-bg d-flex align-items-end" style="background-image: url('https://ik.imagekit.io/tvlk/blog/2021/01/Tari-Saman-shutterstock_513759277-1024x680.jpeg?tr=dpr-2,w-675');">
                                     <div class="img-bg-inner">
                                         <h2>Etnomatematika merupakan kajian yang mengaitkan hubungan antara matematika dan budaya. </h2>
                                     </div>
                                 </a>
                             </div>
                             <div class="swiper-slide">
-                                <a href="single-post.html" class="img-bg d-flex align-items-end" style="background-image: url('./assets/img/portfolio/siger-1.webp');">
+                                <a href="" class="img-bg d-flex align-items-end" style="background-image: url('./assets/img/portfolio/siger-1.webp');">
                                     <div class="img-bg-inner">
                                         <h2>Website ini merupakan bahan ajar yang dikembangkan untuk dapat menumbuhkan kecintaan dan kebanggaan terhadap budaya Indonesia.</h2>
                                     </div>
