--- a/ujikom.html
+++ b/ujikom.html
@@ -128,7 +128,12 @@
                     <div class="card-body p-4">
                         <p class="">1. Stadiom Gelora Bung Karno (GBK) terletak di Jakarta Pusat, DKI Jakarta, Indonesia. Ketika pertama kali dibuka pada tahun 1962, GBK memiliki daya tampung tempat duduk sebesar 110.000, namun di tahun 2006 untuk Piala Asia AFC
                             2007 berkurang menjadi sebesar 88.083 dan diantara tahun 2016 – 2017 berkurang lagi menjadi sebesar 77.193 ketika kegiatan Asian Games dan Asian Para Games.</p>
-                        <div class="d-flex justify-content-center"> <img src="assets/img/portfolio/Picture10.jpg " class="w-lg-50 img-fluid " alt=""></div>
+
+                        <img src="assets/img/portfolio/Picture10.jpg" class="w-lg-50 img-fluid mx-auto d-block" alt="">
+                        <p class="fw-bold text-center mb-0">Gambar 1. Stadion Gelora Bung Karno (GBK)</p>
+                        <p class="fw-light text-center mb-3">Sumber: https://www.detik.com/sumut/sepakbola/d-6799874/gbk-masuk-daftar-10-stadion-terbaik-dunia</p>
+                        <p style="text-indent: 1em;">Gelora Bung Karno semula memiliki luas 279, 1 hektar. Berikan argumentasi ananda terkait luas GBK saat ini? Cobalah menghitung berapa persentasi besar penyusutan wilayah GBK saat ini!</p>
+
 
 
                     </div>
