--- a/ujikom.html
+++ b/ujikom.html
@@ -126,16 +126,27 @@
                 </div>
                 <div class="card shadow">
                     <div class="card-body p-4">
-                        <p class="">1. Stadiom Gelora Bung Karno (GBK) terletak di Jakarta Pusat, DKI Jakarta, Indonesia. Ketika pertama kali dibuka pada tahun 1962, GBK memiliki daya tampung tempat duduk sebesar 110.000, namun di tahun 2006 untuk Piala Asia AFC
-                            2007 berkurang menjadi sebesar 88.083 dan diantara tahun 2016 – 2017 berkurang lagi menjadi sebesar 77.193 ketika kegiatan Asian Games dan Asian Para Games.</p>
+                        <div>
+                            <p class="">1. Stadiom Gelora Bung Karno (GBK) terletak di Jakarta Pusat, DKI Jakarta, Indonesia. Ketika pertama kali dibuka pada tahun 1962, GBK memiliki daya tampung tempat duduk sebesar 110.000, namun di tahun 2006 untuk Piala Asia
+                                AFC 2007 berkurang menjadi sebesar 88.083 dan diantara tahun 2016 – 2017 berkurang lagi menjadi sebesar 77.193 ketika kegiatan Asian Games dan Asian Para Games.</p>
 
-                        <img src="assets/img/portfolio/Picture10.jpg" class="w-lg-50 img-fluid mx-auto d-block" alt="">
-                        <p class="fw-bold text-center mb-0">Gambar 1. Stadion Gelora Bung Karno (GBK)</p>
-                        <p class="fw-light text-center mb-3">Sumber: https://www.detik.com/sumut/sepakbola/d-6799874/gbk-masuk-daftar-10-stadion-terbaik-dunia</p>
-                        <p style="text-indent: 1em;">Gelora Bung Karno semula memiliki luas 279, 1 hektar. Berikan argumentasi ananda terkait luas GBK saat ini? Cobalah menghitung berapa persentasi besar penyusutan wilayah GBK saat ini!</p>
-
-
-
+                            <img src="assets/img/portfolio/Picture10.jpg" class="w-lg-50 img-fluid mx-auto d-block" alt="">
+                            <p class="fw-bold text-center mb-0">Gambar 1. Stadion Gelora Bung Karno (GBK)</p>
+                            <p class="fw-light text-center mb-3">Sumber: https://www.detik.com/sumut/sepakbola/d-6799874/gbk-masuk-daftar-10-stadion-terbaik-dunia</p>
+                            <p style="text-indent: 1em;">Gelora Bung Karno semula memiliki luas 279, 1 hektar. Berikan argumentasi ananda terkait luas GBK saat ini? Cobalah menghitung berapa persentasi besar penyusutan wilayah GBK saat ini!</p>
+                        </div>
+                        <div>
+                            <p class="">2. Rumah Honai merupakan salah satu rumah adat suku Papua. Rumah Honai diciptakan oleh suku Dani, suku yang sangat bergantung dengan alam. Sebelum menciptakan rumah Honai, suku Dani tinggal dibawah pohon-pohon besar, karena
+                                kondisi cuaca yang tidak menentu maka suku Dani menciptakan tempat tinggal yang di kenal dengan rumah Honai. Bentuk atapnya berbentuk kerucut tumpul dengan maksud untuk mengurangi hawa dingin, serta untuk menghalangi air
+                                hujan membasahi dinding rumah. Atap rumah terbuat dari daun sagu, jerami kering dan ilalang. Rumah Honai sangat ramah lingkungan, serta bentuknya tidak terlalu luas, terlihat seperti jamur raksasa.
+                            </p>
+                            <img src="assets/img/portfolio/rumah-honai-1.jpg" class="w-lg-50 img-fluid mx-auto d-block" alt="">
+                            <p class="fw-bold text-center mb-0">Gambar 2. Rumah Honai, Papua</p>
+                            <p class="fw-light text-center mb-3">Sumber: https://www.popmama.com/big-kid/6-9-years-old/jemima/fakta-rumah-honai-yang-punya-banyak-fungsi</p>
+                            <p style="text-indent: 1em;">Rumah honai dibangun oleh kurang lebih 20 laki-laki suku Dani selama seminggu dengan cara bergotong royong. Jika rumah honai dikerjakan oleh 12 laki-laki suku Dani, maka membutuhkan waktu berapa lama untuk membangunnya? berikan
+                                argumentasi ananda.</p>
+                            <p style="text-indent: 1em;">Rumah honai memiliki luas 5 – 7 m dengan tinggi rumah sekitar 2,5 meter yang terbagi menjadi dua bagian (lantai atas dan lantai bawah). Perkirakan perbandingan luas lantai atas dan bawah rumah Honai!.</p>
+                        </div>
                     </div>
                 </div>
             </div>
