--- a/petunjuk.html
+++ b/petunjuk.html
@@ -125,41 +125,41 @@
                 </div>
                 <div class="row">
                     <div class="col-xl-4 col-md-6 d-flex   mt-4" data-aos="zoom-in" data-aos-delay="100">
-                        <div class="icon-box">
+                        <div class="icon-box rounded-3">
                             <div class="icon"><i class="bx bxl-dribbble"></i></div>
                             <p><b>-</b> Berdoa sebelum memulai kegiatan pembelajaran</p>
                             <p><b>-</b> Cermati deskripsi modul pembelajaran.</p>
                         </div>
                     </div>
                     <div class="col-xl-4 col-md-6 d-flex mt-4 " data-aos="zoom-in" data-aos-delay="200">
-                        <div class="icon-box">
+                        <div class="icon-box rounded-3">
                             <div class="icon"><i class="bx bx-file"></i></div>
                             <p>Pahami capaian pembelajaran dan tujuan pembelajaran dari setiap aktivitas pembelajaran. </p>
                         </div>
                     </div>
 
                     <div class="col-xl-4 col-md-6 d-flex  mt-4 " data-aos="zoom-in" data-aos-delay="300">
-                        <div class="icon-box">
+                        <div class="icon-box rounded-3">
                             <div class="icon"><i class="bx bx-tachometer"></i></div>
                             <p>Cermati dan selesaikan setiap aktivitas pembelajaran. Pastikan Ananda memahami setiap bagian dengan baik baru melanjutkan pada aktivitas pembelajaran selanjutnya.</p>
                         </div>
                     </div>
 
                     <div class="col-xl-4 col-md-6 d-flex  mt-4 " data-aos="zoom-in" data-aos-delay="400">
-                        <div class="icon-box">
+                        <div class="icon-box rounded-3">
                             <div class="icon"><i class="bx bx-layer"></i></div>
                             <p><b>-</b>Kenali konsep matematika pada objek budaya dibagian video pembelajaran.</p>
                             <p><b>-</b>Lengkapi setiap bagian di aktivitas pembelajaran dengan cermat dan tepat.</p>
                         </div>
                     </div>
                     <div class="col-xl-4 col-md-6 d-flex  mt-4 " data-aos="zoom-in" data-aos-delay="400">
-                        <div class="icon-box">
+                        <div class="icon-box rounded-3">
                             <div class="icon"><i class="bx bx-layer"></i></div>
                             <p>Selesaikan bagian evaluasi jika setiap materi telah dipahami.</p>
                         </div>
                     </div>
                     <div class="col-xl-4 col-md-6 d-flex  mt-4 " data-aos="zoom-in" data-aos-delay="400">
-                        <div class="icon-box">
+                        <div class="icon-box rounded-3">
                             <div class="icon"><i class="bx bx-layer"></i></div>
                             <p><b>-</b>Tanyakan kepada guru jika mengalami kesulitan.</p>
                             <p><b>~</b>Baiklah, selamat belajar<b>~</b></p>
