--- a/petunjuk.html
+++ b/petunjuk.html
@@ -147,7 +147,7 @@
 
                     <div class="col-xl-4 col-md-6 d-flex  mt-4 " data-aos="zoom-in" data-aos-delay="400">
                         <div class="icon-box rounded-3">
-                            <div class="icon"><i class="bx bx-layer"></i></div>
+                            <div class="icon"><i class="bx bx-file"></i></div>
                             <p><b>-</b>Kenali konsep matematika pada objek budaya dibagian video pembelajaran.</p>
                             <p><b>-</b>Lengkapi setiap bagian di aktivitas pembelajaran dengan cermat dan tepat.</p>
                         </div>
@@ -160,7 +160,7 @@
                     </div>
                     <div class="col-xl-4 col-md-6 d-flex  mt-4 " data-aos="zoom-in" data-aos-delay="400">
                         <div class="icon-box rounded-3">
-                            <div class="icon"><i class="bx bx-layer"></i></div>
+                            <div class="icon"><i class="bx bx-tachometer"></i></div>
                             <p><b>-</b>Tanyakan kepada guru jika mengalami kesulitan.</p>
                             <p><b>~</b>Baiklah, selamat belajar<b>~</b></p>
                         </div>
