--- a/index.html
+++ b/index.html
@@ -126,9 +126,10 @@
                 <div class="section-title">
                     <h2>Pendahuluan</h2>
                 </div>
-                <div class="card shadow">
-                    <div class="card-body p-4">
-                        <h4 class="text-center"><code>بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيْم </code></h4>
+                <div class="card shadow ">
+                    <div class="card-body icon-box p-4 rounded">
+                        <h4 class="text-center">
+                            بِسْمِ اللَّهِ الرَّحْمَنِ الرَّحِيْم </h4>
                         <p class="">Modul ini merupakan bahan ajar yang dikembangkan agar Ananda dapat belajar secara mandiri. Modul ini akan membantu Ananda memahami konsep terkait bilangan. Modul ini dirancang dengan serangkaian aktivitas pembelajaran yang harus
                             Ananda kerjakan. Pastikan setiap aktivitas dapat diselesaikan dengan baik. Tanyakan kepada guru dan orang terdekat jika ananda mengalami kesulitan. Sebelum ananda tuntas pada satu materi, jangan dahulu lanjut kemateri berikutnya.</p>
                         <p>
@@ -154,7 +155,7 @@
                     <h2>Tabel 1. Capaian Pembelajaran dan Tujuan Pembelajaran </h2>
                 </div>
                 <div class="row">
-                    <div class="col d-flex align-items-stretch">
+                    <div class="col d-flex align-items-stretch icon-box rounded">
                         <div class="info">
                             <table class="table">
                                 <thead>
