--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
                     <h2>Tabel 1. Capaian Pembelajaran dan Tujuan Pembelajaran </h2>
                 </div>
                 <div class="row">
-                    <div class="col d-flex align-items-stretch icon-box rounded">
+                    <div class="col d-flex align-items-stretch icon-box rounded m-3">
                         <div class="info">
-                            <table class="table">
+                            <table class="table rounded">
                                 <thead>
                                     <tr>
                                         <th scope="col">Capain Pembelajaran</th>
