--- a/materi.html
+++ b/materi.html
@@ -123,9 +123,9 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-6 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="100">
-                        <div class="member d-flex align-items-start icon-box">
-
-                            <div class="member-info">
+                        <div class="member d-flex align-items-start">
+                            <div class="icon-box-m rounded-3">
+                                <div class="icon"><i class='bx bx-book-open'></i></div>
                                 <a href="materi1.html">
                                     <h4>Konsep Perbandingan (Rasio dan Proporsi)</h4>
                                 </a>
@@ -135,8 +135,8 @@
 
                     <div class="col-lg-6 mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="200">
                         <div class="member d-flex align-items-start">
-
-                            <div class="member-info">
+                            <div class="icon-box-m rounded-3">
+                                <div class="icon"><i class='bx bx-book-open'></i></div>
                                 <a href="materi2.html">
                                     <h4>Perbandingan Berbalik Nilai</h4>
                                 </a>
@@ -146,24 +146,22 @@
 
                     <div class="col-lg-6 mt-4 mt-lg-4" data-aos="zoom-in" data-aos-delay="300">
                         <div class="member d-flex align-items-start">
-
-                            <div class="member-info">
+                            <div class="icon-box-m rounded-3">
+                                <div class="icon"><i class='bx bx-book-open'></i></div>
                                 <a href="materi3.html">
                                     <h4>Rasio</h4>
                                 </a>
-
                             </div>
                         </div>
                     </div>
 
                     <div class="col-lg-6 mt-4 mt-lg-4" data-aos="zoom-in" data-aos-delay="400">
                         <div class="member d-flex align-items-start">
-
-                            <div class="member-info">
+                            <div class="icon-box-m rounded-3">
+                                <div class="icon"><i class='bx bx-book-open'></i></div>
                                 <a href="materi4.html">
                                     <h4>Perbandingan Senilai</h4>
                                 </a>
-
                             </div>
                         </div>
                     </div>
