--- a/materi.html
+++ b/materi.html
@@ -147,7 +147,7 @@
                     <div class="col-lg-6 mt-4 mt-lg-4" data-aos="zoom-in" data-aos-delay="300">
                         <div class="member d-flex align-items-start">
                             <div class="icon-box-m rounded-3">
-                                <div class="icon"><i class='bx bx-book-open'></i></div>
+                                <div class="icon"><i class='bx bx-book-alt'></i></div>
                                 <a href="materi3.html">
                                     <h4>Rasio</h4>
                                 </a>
@@ -158,7 +158,7 @@
                     <div class="col-lg-6 mt-4 mt-lg-4" data-aos="zoom-in" data-aos-delay="400">
                         <div class="member d-flex align-items-start">
                             <div class="icon-box-m rounded-3">
-                                <div class="icon"><i class='bx bx-book-open'></i></div>
+                                <div class="icon"><i class='bx bx-book-alt'></i></div>
                                 <a href="materi4.html">
                                     <h4>Perbandingan Senilai</h4>
                                 </a>
