--- a/daftarpustaka.html
+++ b/daftarpustaka.html
@@ -68,14 +68,14 @@
                 <div class="section-title">
                     <h2>Daftar Pustaka</h2>
                 </div>
-                <div class="card shadow">
+                <div class="card shadow icon-box-m  text-white">
                     <div class="card-body p-4">
-                        <ul class="list-group">
-                            <li class="list-group-item">Kemendikbud. 2014. Matematika SMP/MTS Kelas VIII semester 1. Jakarta: Kementerian Pendidikan dan Kebudayaan</li>
-                            <li class="list-group-item">Kemendikbud. 2017. Buku Guru Matematika SMP/MTs Kelas VII . Jakarta: Kementerian Pendidikan dan Kebudayaan</li>
-                            <li class="list-group-item">Kemendikbud. 2022. Matematika untuk Sekolah Menengah Pertama Kelas VII Kurikulum Merdeka. . Jakarta: Kementerian Pendidikan dan Kebudayaan</li>
-                            <li class="list-group-item">Kementerian Pendidikan, Kebudayaan, Riset, dan Teknologi RI. 2021. Inspirasi Pembelajaran yang Menguatkan Numerasi pada Mata Pelajaran IPA, IPS, PJOK, dan Seni Budaya untuk Jenjang Sekolah Menengah Pertama</li>
-                            <li class="list-group-item">https://www.detik.com/sumut/sepakbola/d-6799874/gbk-masuk-daftar-10-stadion-terbaik-dunia</li>
+                        <ul class="list-group ">
+                            <li class="list-group-item icon-box-m">Kemendikbud. 2014. Matematika SMP/MTS Kelas VIII semester 1. Jakarta: Kementerian Pendidikan dan Kebudayaan</li>
+                            <li class="list-group-item icon-box-m">Kemendikbud. 2017. Buku Guru Matematika SMP/MTs Kelas VII . Jakarta: Kementerian Pendidikan dan Kebudayaan</li>
+                            <li class="list-group-item icon-box-m">Kemendikbud. 2022. Matematika untuk Sekolah Menengah Pertama Kelas VII Kurikulum Merdeka. . Jakarta: Kementerian Pendidikan dan Kebudayaan</li>
+                            <li class="list-group-item icon-box-m">Kementerian Pendidikan, Kebudayaan, Riset, dan Teknologi RI. 2021. Inspirasi Pembelajaran yang Menguatkan Numerasi pada Mata Pelajaran IPA, IPS, PJOK, dan Seni Budaya untuk Jenjang Sekolah Menengah Pertama</li>
+                            <li class="list-group-item icon-box-m">https://www.detik.com/sumut/sepakbola/d-6799874/gbk-masuk-daftar-10-stadion-terbaik-dunia</li>
                         </ul>
                     </div>
                 </div>
