--- a/materi1.html
+++ b/materi1.html
@@ -139,8 +139,8 @@
                             <p>Menurut ananda, manakah dari pernyataan-pernyataan diatas yang menjelaskan perbandingan banyak jumlah laki-laki dan perempuan di dalam foto tersebut. Berikan alasan ananda.</p>
                             <h5 class="fw-bold mt-3">Aktivitas 2</h5>
                             <p>Perhatikan video berikut ini.</p>
-                            <div class="ratio ratio-16x9">
-                                <iframe src="https://www.youtube.com/embed/QUT-k6v63dw" title="YouTube video" allowfullscreen></iframe>
+                            <div class="ratio ratio-21x9">
+                                <iframe src="https://www.youtube.com/embed/QUT-k6v63dw" title="YouTube video" allowfullscreen class="w-100"></iframe>
                             </div>
 
                             <div class="badge bg-dark text-wrap mt-3 p-2" style="width: 6rem;">
