--- a/materi1.html
+++ b/materi1.html
@@ -125,7 +125,7 @@
                                 <p class="fw-bold text-center">Gambar 1. Pakaian Adat</p>
                                 <p class="fw-light text-center mb-3">Sumber: https://indihome.co.id/blog/5-contoh-keragaman-sosial-budaya-di-indonesia</p>
                             </div>
-                            <p>Dari foto pada gambar 1. </p>
+                            <p class="mb-2">Dari foto pada gambar 1. </p>
                             <ol class="list-group list-group-numbered">
                                 <li class="list-group-item">Apa informasi yang kamu peroleh? </li>
                                 <li class="list-group-item">Berapa jumlah anggota foto?</li>
@@ -136,9 +136,9 @@
                                 <li class="list-group-item">Jumlah wanita di dalam foto dua kali lebih banyak dari jumlah laki-lakinya. Benarkah pernyataan tersebut?
                                 </li>
                             </ol>
-                            <p>Menurut ananda, manakah dari pernyataan-pernyataan diatas yang menjelaskan perbandingan banyak jumlah laki-laki dan perempuan di dalam foto tersebut. Berikan alasan ananda.</p>
+                            <p class="mt-2">Menurut ananda, manakah dari pernyataan-pernyataan diatas yang menjelaskan perbandingan banyak jumlah laki-laki dan perempuan di dalam foto tersebut. Berikan alasan ananda.</p>
                             <h5 class="fw-bold mt-3">Aktivitas 2</h5>
-                            <p>Perhatikan video berikut ini.</p>
+                            <p class="mb-2">Perhatikan video berikut ini.</p>
                             <div class="ratio ratio-21x9">
                                 <iframe src="https://www.youtube.com/embed/QUT-k6v63dw" title="YouTube video" allowfullscreen class="w-100"></iframe>
                             </div>
@@ -182,7 +182,7 @@
                                 <li class="list-group-item">4. Bagaimana hubungan antara informasi yang tersedia dengan solusi permalahan yang ingin dicapai?</li>
                             </ol>
                             <p>Mari kita mencoba menentukan ukuran tinggi dan panjang foto kue maksuba agar terlihat proporsional.</p>
-                            <p class="fw-bolder">Tabel 2. Rasio Tinggi dan Lebar Foto</p>
+                            <p class="fw-bolder mb-2">Tabel 2. Rasio Tinggi dan Lebar Foto</p>
                             <table class="table">
                                 <thead>
                                     <tr>
