--- a/materi2.html
+++ b/materi2.html
@@ -114,7 +114,6 @@
                         <div class="custom-swiper-button-prev">
                             <span class="bi-chevron-left"></span>
                         </div>
-
                         <div class="swiper-pagination"></div>
                     </div>
                 </div>
@@ -122,13 +121,10 @@
         </div>
     </section>
     <!-- End Hero Slider Section -->
-
     <main id="main">
-
         <!-- ======= Services Section ======= -->
         <section id="services" class="services section-bg">
             <div class="container" data-aos="fade-up">
-
                 <div class="section-title">
                     <h2>Perbandingan Berbalik Nilai</h2>
                 </div>
@@ -147,6 +143,10 @@
 
                             <p>Sedangkan luas daratan Indonesia, menurutnya, lebih dari dua juta kilometer, dengan luas lautan hampir tiga kali lipatnya. Artinya, dua per tiga wilayah Indonesia adalah lautan. "Hampir seperti penduduk Takalar yang mayoritas
                                 berprofesi di laut," katanya.</p>
+                            <p class="mt-2 mb-2">Perhatikan video berikut ini.</p>
+                            <div class="ratio ratio-21x9">
+                                <iframe src="https://www.youtube.com/embed/CDNrJqzao_Y" title="YouTube video" allowfullscreen class="w-100"></iframe>
+                            </div>
                         </div>
                     </div>
                 </div>
