--- a/materi4.html
+++ b/materi4.html
@@ -137,7 +137,7 @@
                         <div class="icon-box">
                             <h4 class="fw-bold">Perbandingan Senilai</h4>
                             <h5 class="fw-bold">Aktivitas 1.</h5>
-                            <p>Perhatikan permasalahan berikut ini.</p>
+                            <p class="mb-2">Perhatikan permasalahan berikut ini.</p>
                             <div class="card">
                                 <div class=" text-center mt-2"><img src="assets/img/portfolio/Picture6.jpg" class="card-img-top w-lg-50 w-50 " alt="..."></div>
                                 <div class="card-body">
@@ -151,7 +151,7 @@
                             <p class="mt-3">Situasi B.</p>
                             <p class="mt-3">Es Pisang Ijo manakah yang lebih kental, 3 takar sirup merah dicampur 2 gelas air putih atau dicampur 4 bungkus sirup merah dicampur 2 gelas air putih?</p>
                             <p class="mt-3">Berikan argumentasi ananda.</p>
-                            <h5 class="fw-bold">Aktivitas 2.</h5>
+                            <h5 class="fw-bold mt-2">Aktivitas 2.</h5>
                             <div class="card">
                                 <div class="mt-2 d-flex text-center gap-1">
                                     <img src="assets/img/portfolio/Picture7.jpg" class="card-img-top w-lg-50 w-50 " alt="...">
@@ -166,11 +166,15 @@
                             <div class="mt-2">Tahun 2023 diperkirakan banyak pihak yang terlibat, partisipan laki-laki diperkirakan lebih banyak dari perempuan, jumlahnya perbandingan 7 terhadap 9. Terdapat 2100 perempuan yang terlibat dalam acara grebeg Syawal 2023. Berapa
                                 jumlah laki-laki partisipan yang terlibat? Sarah dan Ratna mencoba menghitung perbandingan jumlah partisipan laki-laki dan perempuan yang terlibat dalam kegiatan acara.
                                 <p>Sarah menyatakan jumlah laki-laki 3800 orang, periksalah apakah pernyataan Sarah tersebut benar?</p>
-                                <p>Kevin menyatakan bahwa 2700 partisipan laki-laki yang ikut dalam kegiatan grebeg, Dia menunjukkan cara penyelesaian seperti berikut.</p>
+                                <p class="mb-2">Kevin menyatakan bahwa 2700 partisipan laki-laki yang ikut dalam kegiatan grebeg, Dia menunjukkan cara penyelesaian seperti berikut.</p>
 
                                 <img src="assets/img/portfolio/rumus1.png " class="w-lg-50 img-fluid" alt="">
                                 <p class="mt-3">Periksalah apakah perhitungan Kevin benar, bandingkan dengan temuan Sarah dan Ratna. Berikan argumentasi Ananda.</p>
                                 <img src="assets/img/portfolio/Picture9.png " class="w-lg-50 img-fluid mt-2" alt="">
+                            </div>
+                            <p class="mt-2 mb-2">Perhatikan video berikut ini.</p>
+                            <div class="ratio ratio-21x9">
+                                <iframe src="https://www.youtube.com/embed/c4nKchW8amU" title="YouTube video" allowfullscreen class="w-100"></iframe>
                             </div>
                         </div>
                     </div>
