--- a/materi3.html
+++ b/materi3.html
@@ -145,7 +145,7 @@
                                         abad 15 pada zaman bupati Ponorogo Bathoro Katong, karena bermanfaat menyembuhkan orang sakit.</p>
                                 </div>
                             </div>
-                            <p>Coba Perhatikan!</p>
+                            <p class="mt-2">Coba Perhatikan!</p>
                             <p>Ratna dan Galuh menjadi panitia dalam kegiatan Gerebeg. Ratna dan Galuh bertugas untuk menyajikan es dawet kepada para tamu. Mereka akan mencampur air gula merah beserta dawet dan santen kental. Untuk memperoleh rasa yang pas,
                                 keduanya menetapkan beberapa campuran yang diujicobakan. Campuran manakah yang memiiki ampuran air gula aren terkuat? Berikan argument ananda.
                             </p>
