--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <ul>
                     <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
                     <li><a class="nav-link scrollto" href="materi.html">Materi</a></li>
+                    <li><a class="nav-link   scrollto" href="daftarpustaka.html">Video Budaya</a></li>
                     <li><a class="nav-link scrollto" href="ujikom.html">Uji Kompetensi</a></li>
                     <li><a class="nav-link   scrollto" href="daftarpustaka.html">Daftar Pustaka</a></li>
                     <li><a class="nav-link" href="petunjuk.html">Petunjuk Penggunaan</a></li>
