--- a/materi4.html
+++ b/materi4.html
@@ -170,9 +170,9 @@
 
                                 <img src="assets/img/portfolio/rumus1.png " class="w-lg-50 img-fluid" alt="">
                                 <p class="mt-3">Periksalah apakah perhitungan Kevin benar, bandingkan dengan temuan Sarah dan Ratna. Berikan argumentasi Ananda.</p>
-                                <img src="assets/img/portfolio/Picture9.png " class="w-lg-50 img-fluid mt-2" alt="">
+
                             </div>
-                            <p class="mt-2 mb-2">Perhatikan video berikut ini.</p>
+                            <p class="mt-2 mb-2">untuk lebih memahami materi, perhatikan video berikut ini.</p>
                             <div class="ratio ratio-21x9">
                                 <iframe src="https://www.youtube.com/embed/c4nKchW8amU" title="YouTube video" allowfullscreen class="w-100"></iframe>
                             </div>
