--- a/materi1.html
+++ b/materi1.html
@@ -138,7 +138,7 @@
                             </ol>
                             <p class="mt-2">Menurut ananda, manakah dari pernyataan-pernyataan diatas yang menjelaskan perbandingan banyak jumlah laki-laki dan perempuan di dalam foto tersebut. Berikan alasan ananda.</p>
                             <h6 class="fw-bold mt-3">Aktivitas 2</h6>
-                            <p class="mb-2">Perhatikan video berikut ini.</p>
+                            <p class="mb-2">Untuk lebih memahami materi, perhatikan video berikut ini.</p>
                             <div class="ratio ratio-21x9">
                                 <iframe src="https://www.youtube.com/embed/QUT-k6v63dw" title="YouTube video" allowfullscreen class="w-100"></iframe>
                             </div>
