--- a/materi2.html
+++ b/materi2.html
@@ -143,7 +143,7 @@
 
                             <p>Sedangkan luas daratan Indonesia, menurutnya, lebih dari dua juta kilometer, dengan luas lautan hampir tiga kali lipatnya. Artinya, dua per tiga wilayah Indonesia adalah lautan. "Hampir seperti penduduk Takalar yang mayoritas
                                 berprofesi di laut," katanya.</p>
-                            <p class="mt-2 mb-2">Perhatikan video berikut ini.</p>
+                            <p class="mt-2 mb-2">Untuk lebih memahami materi, perhatikan video berikut ini.</p>
                             <div class="ratio ratio-21x9">
                                 <iframe src="https://www.youtube.com/embed/CDNrJqzao_Y" title="YouTube video" allowfullscreen class="w-100"></iframe>
                             </div>
