--- a/petunjuk.html
+++ b/petunjuk.html
@@ -126,14 +126,25 @@
                 <div class="row">
                     <div class="col-xl-4 col-md-6 d-flex   mt-4" data-aos="zoom-in" data-aos-delay="100">
                         <div class="icon-box rounded-3">
-                            <div class="icon"><i class="bx bxl-dribbble"></i></div>
+                            <div class="icon d-flex justify-content-between">
+                                <i class="bx bxl-dribbble"></i>
+                                <button type="button" class="btn btn-primary">
+                                     <span class="badge badge-light">1</span>
+                                  </button>
+                            </div>
                             <p><b>-</b> Berdoa sebelum memulai kegiatan pembelajaran</p>
                             <p><b>-</b> Cermati deskripsi modul pembelajaran.</p>
                         </div>
                     </div>
                     <div class="col-xl-4 col-md-6 d-flex mt-4 " data-aos="zoom-in" data-aos-delay="200">
+
                         <div class="icon-box rounded-3">
-                            <div class="icon"><i class="bx bx-file"></i></div>
+                            <div class="icon d-flex justify-content-between">
+                                <i class="bx bx-file"></i>
+                                <button type="button" class="btn btn-primary">
+                                    <span class="badge badge-light">2</span>
+                                 </button>
+                            </div>
                             <p>Pahami capaian pembelajaran dan tujuan pembelajaran dari setiap aktivitas pembelajaran. </p>
                         </div>
                     </div>
